@@ -5,9 +5,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>vip.sheeptech</groupId>
-    <artifactId>pdftool</artifactId>
+    <artifactId>officetool</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>pdftool</name>
+    <name>officetool</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -47,6 +47,11 @@
             <artifactId>pdfbox</artifactId>
             <version>2.0.29</version>
         </dependency>
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-core</artifactId>
+            <version>5.8.25</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -64,21 +69,37 @@
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
+                <configuration>
+                    <mainClass>vip.sheeptech.officetool.AppStart</mainClass>
+                    <options>
+                        <option>--add-opens</option>
+                        <option>java.base/java.lang=org.openjfx.hellofx</option>
+                    </options>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>3.5.0</version>
                 <executions>
                     <execution>
-                        <!-- Default configuration for running with: mvn clean javafx:run -->
-                        <id>default-cli</id>
-                        <configuration>
-                            <mainClass>vip.sheeptech.pdftool/vip.sheeptech.pdftool.HelloApplication</mainClass>
-                            <launcher>app</launcher>
-                            <jlinkZipName>app</jlinkZipName>
-                            <jlinkImageName>app</jlinkImageName>
-                            <noManPages>true</noManPages>
-                            <stripDebug>true</stripDebug>
-                            <noHeaderFiles>true</noHeaderFiles>
-                        </configuration>
+                        <!-- 绑定 Maven 生命周期的 package 阶段 -->
+                        <phase>package</phase>
+                        <goals>
+                            <!-- package 阶段执行时，让其调用插件的 repackage 目标 -->
+                            <goal>shade</goal>
+                        </goals>
                     </execution>
                 </executions>
+                <configuration>
+                    <transformers>
+                        <!-- 添加入口类 -->
+                        <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                            <!-- 入口类 -->
+                            <mainClass>vip.sheeptech.officetool.AppStart</mainClass>
+                        </transformer>
+                    </transformers>
+                </configuration>
             </plugin>
         </plugins>
     </build>
